--- a/.gitmodules
+++ b/.gitmodules
@@ -58,6 +58,6 @@
 [submodule "istio"]
 	path = istio
 	url = https://github.com/DickChesterwood/istio-fleetman
-[submodule "prometheus/Hands-On-Infrastructure-Monitoring-with-Prometheus"]
-	path = prometheus/Hands-On-Infrastructure-Monitoring-with-Prometheus
+[submodule "prometheus"]
+	path = prometheus
 	url = https://github.com/PacktPublishing/Hands-On-Infrastructure-Monitoring-with-Prometheus.git
