--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "redis/word-fling"]
-	path = redis/word-fling
-	url = https://github.com/theganyo/word-fling.git
-[submodule "redis/rapid-redis"]
-	path = redis/rapid-redis
-	url = https://github.com/theganyo/rapid-redis.git
 [submodule "go/gofullstack"]
 	path = go/gofullstack
 	url = https://github.com/EngineerKamesh/gofullstack.git
@@ -103,3 +97,6 @@
 [submodule "redis/Redis-Stack-for-Application-Modernization"]
 	path = redis/Redis-Stack-for-Application-Modernization
 	url = https://github.com/PacktPublishing/Redis-Stack-for-Application-Modernization.git
+[submodule "redis/redis-essentials"]
+	path = redis/redis-essentials
+	url = https://github.com/redis-essentials/book.git
